# pairs-trading-research

./: .gitignore  CLAUDE.de  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: 01_cointegration_scan.py  02_pair_backtest.py
src/pairs_trading/: hedge_ratio.py  selection.py  signals.py
tests/: test_hedge_ratio.py  test_selection.py  test_signals.py
