[project]
name = "pairs-trading-research"
version = "0.1.0"
description = "Cointegration-based pairs trading research using the Backtest-Engine framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtest-engine",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[tool.uv.sources]
backtest-engine = { path = "../Backtest-Engine", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pairs_trading"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
